--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>项目管理平台</title>
+    <title>知识积累</title>
+    <link rel="shortcut icon" type="image/x-icon" href=".//cc.ico" rel="external nofollow" /> 
   </head>
   <body>
     <noscript> </noscript>
